--- a/A3/index.html
+++ b/A3/index.html
@@ -155,7 +155,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-default btn-block login-button">Login</button>
+                            <button type="button" class="btn btn-default btn-block login-button" onclick="window.location.href='./initial2.html'" >Login</button>
 
                             <div class="container-inner" style="margin-top:10px">
                                 <div class="btn-group btn-group-lg">
