--- a/A3/initial2.html
+++ b/A3/initial2.html
@@ -36,7 +36,7 @@
             <button class="btn btn-success navbar-btn" data-toggle="modal" data-target="#addEvent">Add Event</button>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><span class="glyphicon glyphicon-user" ></span> Username</a></li>
-                <li><a href="#" data-toggle="modal" data-target="#logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
         </div>
     </div>
