--- a/A3/index.html
+++ b/A3/index.html
@@ -140,7 +140,7 @@
                                 <label for="username" class="cols-sm-2 control-label">Username</label>
                                 <div class="cols-sm-10">
                                     <div class="input-group">
-                                        <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                                        <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                                         <input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username"/>
                                     </div>
                                 </div>
@@ -171,9 +171,9 @@
 
         </div>
     </div>
-    <div class="container-inner" style="margin-top:100px">
+    <div class="container-fluid" style="margin-top:100px">
         <div class="row">
-            <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+            <div class="col-sm-offset-2 col-sm-8 col-xs-12 col-12">
                 <div class="panel-group">
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -244,7 +244,7 @@
 
 
     <footer>
-        <div class="container-inner" style="margin-top:50px">
+        <div class="container-fluid" style="margin-top:50px">
             <div id="footer-bottom" class="row">
                 <div class="col-md-6 footer-bottom-left">
                     <p>Copyright © 2018 by Tiago&Companhia.</p>
@@ -255,11 +255,12 @@
         </div>
     </footer>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+    <script src="script.js" type="text/javascript" charset="utf-8"></script>
+
 </body>
 </html>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
-<script src="script.js" type="text/javascript" charset="utf-8"></script>
