--- a/A3/initial2.html
+++ b/A3/initial2.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top" >
+<nav class="navbar navbar-inverse sticky-top navbar-fixed-top" >
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -92,6 +92,17 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="uploadImages" class="cols-sm-2 control-label">Upload Image</label>
+                            <div class="input-group">
+                                <span class="input-group-btn">
+                                     <span class="btn btn-default btn-file">
+                                        Browse… <input type="file" id="uploadImages">
+                                     </span>
+                                </span>
+                                <input type="text" class="form-control" readonly>
+                            </div>
+                        </div>
 
                         <button type="button" class="btn btn-success btn-block add-button">Create Event</button>
 
@@ -102,24 +113,30 @@
 
     </div>
 </div>
-        <div class="container" style="margin-top:100px">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tab-menu">
-                <div class="list-group">
-                    <a href="#" class="list-group-item active text-center">
+        <div class="container-fluid tabs">
+            <ul class="col-lg-3 col-md-3 col-sm-4 col-xs-4 tab-menu tab-divider">
+                <li class=" active ">
+                    <a href="#" class="text-center">
                         All
                     </a>
+                </li>
+                <li>
                     <a href="#" class="list-group-item text-center">
                         My
                     </a>
+                </li>
+                <li>
                     <a href="#" class="list-group-item text-center">
                         Going
                     </a>
+                </li>
+                <li>
                     <a href="#" class="list-group-item text-center">
                         Gone
                     </a>
-                </div>
-            </div>
-            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 tab">
+                </li>
+            </ul>
+            <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8 tab">
                 <!-- All section -->
                 <div class="tab-content active">
                     <div class="container-inner" >
@@ -369,7 +386,7 @@
 
 
 <footer>
-    <div class="container-inner" style="margin-top:50px">
+    <div class="container-fluid" style="margin-top:50px">
         <div id="footer-bottom" class="row">
             <div class="col-md-6 footer-bottom-left">
                 <p>Copyright © 2018 by Tiago&Companhia.</p>
@@ -380,11 +397,13 @@
     </div>
 </footer>
 
-</body>
-</html>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
 <script src="./script.js" type="text/javascript" charset="utf-8"></script>
+
+</body>
+</html>
+
