--- a/profile.html
+++ b/profile.html
@@ -12,13 +12,11 @@
   <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
-  <link rel="stylesheet" href="./initial.css"/>
-
-  <title>Homepage</title>
+  <title>Username</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
     <a class="navbar-brand" href="./index.html">Event Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -32,8 +30,10 @@
               <button type="button" class="btn btn-outline-light"><i class="fas fa-search"></i></button>
             </span>
           </div>
+
         </li>
       </ul>
+
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href=# data-toggle="modal" data-target="#add_event"><i class="fas fa-plus"></i> Add Event </a>
@@ -49,6 +49,7 @@
         </li>
       </ul>
     </div>
+  </div>
 </nav>
 
 <div class="modal fade" id="add_event">
@@ -98,7 +99,7 @@
         <label for="upload_image">Upload Image</label>
         <div class="input-group mb-2">
           <label class="btn btn-outline-dark">
-            Browse <input type="file" hidden id="upload_image">
+            Browse… <input type="file" hidden id="upload_image">
           </label>
         </div>
 
@@ -109,63 +110,34 @@
   </div>
 </div>
 
-<div class="container main-container" >
-  <h1>Events</h1>
-  <hr>
-  <div class="row" >
-    <div class="col-lg-3 col-12">
-      <ul class="nav nav-tabs flex-lg-column flex-sm-row vertical-tabs" id="v-tab" role="tablist" aria-orientation="vertical" >
-        <li class="nav-item">
-          <a class="nav-link active" id="v-all-tab" data-toggle="tab" href="#v-tab-all" role="tab" aria-controls="v-tab-all" aria-selected="true">All</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="v-my-tab" data-toggle="tab" href="#v-tab-my" role="tab" aria-controls="v-tab-my" aria-selected="false">My</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="v-going-tab" data-toggle="tab" href="#v-tab-going" role="tab" aria-controls="v-tab-going" aria-selected="false">Going</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="v-gone-tab" data-toggle="tab" href="#v-tab-gone" role="tab" aria-controls="v-tab-gone" aria-selected="false">Gone</a>
-        </li>
-        <hr>
-        <button class="btn btn-outline-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-          Filter
-        </button>
-        <div class="collapse col-12 collapse-stuff" id="collapseExample">
-          <h4>Sort</h4>
-          <hr>
-          <a class="dropdown-item" href="#">A-Z</a>
-          <a class="dropdown-item" href="#">Z-A</a>
-          <a class="dropdown-item" href="#">Most events</a>
-          <a class="dropdown-item" href="#">Least events</a>
-          <h4>Category</h4>
-          <hr>
-          <div class="form-check mb-2">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck1" value="option1"> Futebol
-            </label>
-          </div>
-          <div class="form-check mb-2">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input" name="optionsCheckCategory" id="optionsCheck2" value="option2"> Concertos
-            </label>
-          </div>
-
-        </div>
-      </ul>
+<div class="container" style="margin-top:100px">
+  <div class="row">
+    <div class="col-3">
+      <img src="./imgs/plog.jpg" class="img-fluid img-rounded" alt="Cinque Terre">
+      <h2>Username</h2>
+      <hr>
+      <h6><i class="fas fa-user fa-fw"></i>Mari Gui</h6>
+      <h6><i class="fas fa-envelope fa-fw"></i>marigui@gmail.com</h6>
+      <h6><i class="fas fa-map-marker-alt fa-fw"></i>Porto, Portugal</h6>
+      <hr>
+      <button type="button" class="btn btn-dark btn-lg btn-block">Edit Profile</button>
     </div>
-
-    <div class="col-md-9 col-12">
-      <div class="container">
-        <div class="tab-content " id="v-tab-tabContent">
-          <div class="tab-pane fade show active" id="v-tab-all" role="tabpanel" aria-labelledby="v-tab-all-tab">
-            <div>
-
-            </div>
-            <div class="jumbotron p-1 mb-5 mt-1">
+    <div class="col-8 offset-1">
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="tab" href="#events"><h4>Events</h4></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#friends"><h4>Friends</h4></a>
+        </li>
+      </ul>
+      <div class="container" data-spy="scroll" data-offset="50" style="position:relative; overflow-y: scroll; height:37em">
+        <div class="tab-content">
+          <div id="events" class="container tab-pane fade show active"><br>
+            <div class="jumbotron p-1 mb-1 mt-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./square.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Concerto Mega Fixe</h3>
@@ -174,10 +146,10 @@
                 </div>
               </div>
             </div>
-            <div class="jumbotron p-1 mb-5">
+            <div class="jumbotron p-1 mb-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Aniversário Makukula</h3>
@@ -186,10 +158,10 @@
                 </div>
               </div>
             </div>
-            <div class="jumbotron p-1">
+            <div class="jumbotron p-1 mb-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Notas de Plog</h3>
@@ -198,60 +170,71 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="tab-pane fade" id="v-tab-my" role="tabpanel" aria-labelledby="v-tab-my-tab">
-
-            <div class="jumbotron p-1">
+            <div class="jumbotron p-1 mb-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/benfica_maritimo.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
-                  <h3>Notas de Plog</h3>
-                  <h6>Porto, Portugal</h6>
-                  <h6>29/02/2020</h6>
+                  <h3>Benfica-Marítimo</h3>
+                  <h6>Lisboa, Portugal</h6>
+                  <h6>03/03/2018</h6>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="tab-pane fade" id="v-tab-going" role="tabpanel" aria-labelledby="v-tab-going-tab">
-
-            <div class="jumbotron p-1 mb-5">
+            <div class="jumbotron p-1 mb-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/benfica_aves.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
-                  <h3>Aniversário Makukula</h3>
-                  <h6>Kishasa, Congo</h6>
-                  <h6>04/03/2018</h6>
+                  <h3>Benfica-Aves</h3>
+                  <h6>Lisboa, Portugal</h6>
+                  <h6>10/03/2018</h6>
                 </div>
               </div>
             </div>
             <div class="jumbotron p-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/feirense_benfica.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
-                  <h3>Notas de Plog</h3>
-                  <h6>Porto, Portugal</h6>
-                  <h6>29/02/2020</h6>
+                  <h3>Feirense-Benfica</h3>
+                  <h6>Santa Maria da Feira, Portugal</h6>
+                  <h6>17/03/2018</h6>
                 </div>
               </div>
             </div>
           </div>
-          <div class="tab-pane fade" id="v-tab-gone" role="tabpanel" aria-labelledby="v-tab-gone-tab">
-
-            <div class="jumbotron p-1 mb-5 mt-1">
+          <div id="friends" class="container tab-pane fade"><br>
+            <div class="jumbotron p-1 mb-1 mt-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./square.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/jonas.png" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
-                  <h3>Concerto Mega Fixe</h3>
-                  <h6>Porto, Portugal</h6>
-                  <h6>17/02/2018</h6>
+                  <h3>JonasGoncalves</h3>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1 mb-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/cervi.png" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>FrancoCervi</h3>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/aalmeida.png" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>AndreAlmeida</h3>
                 </div>
               </div>
             </div>
@@ -261,8 +244,6 @@
     </div>
   </div>
 </div>
-
-
 
 
 </body>
