--- a/A3/initial2.html
+++ b/A3/initial2.html
@@ -165,7 +165,7 @@
             <div class="jumbotron p-1 mb-5 mt-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./square.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Concerto Mega Fixe</h3>
@@ -177,7 +177,7 @@
             <div class="jumbotron p-1 mb-5">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Aniversário Makukula</h3>
@@ -189,7 +189,7 @@
             <div class="jumbotron p-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Notas de Plog</h3>
@@ -204,7 +204,7 @@
             <div class="jumbotron p-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Notas de Plog</h3>
@@ -219,7 +219,7 @@
             <div class="jumbotron p-1 mb-5">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Aniversário Makukula</h3>
@@ -231,7 +231,7 @@
             <div class="jumbotron p-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Notas de Plog</h3>
@@ -246,7 +246,7 @@
             <div class="jumbotron p-1 mb-5 mt-1">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="./square.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                  <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
                 </div>
                 <div class="col-md-9">
                   <h3>Concerto Mega Fixe</h3>
