--- a/A3/profile.html
+++ b/A3/profile.html
@@ -12,11 +12,11 @@
   <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
-  <title>Homepage</title>
+  <title>Username</title>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
     <a class="navbar-brand" href="./index.html">Event Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -105,6 +105,141 @@
 
         <button type="button" class="btn btn-block btn-outline-dark mb-2">Add Event</button>
 
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container" style="margin-top:100px">
+  <div class="row">
+    <div class="col-3">
+      <img src="./imgs/plog.jpg" class="img-fluid img-rounded" alt="Cinque Terre">
+      <h2>Username</h2>
+      <hr>
+      <h6><i class="fas fa-user fa-fw"></i>Mari Gui</h6>
+      <h6><i class="fas fa-envelope fa-fw"></i>marigui@gmail.com</h6>
+      <h6><i class="fas fa-map-marker-alt fa-fw"></i>Porto, Portugal</h6>
+      <hr>
+      <button type="button" class="btn btn-dark btn-lg btn-block">Edit Profile</button>
+    </div>
+    <div class="col-8 offset-1">
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="tab" href="#events"><h4>Events</h4></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#friends"><h4>Friends</h4></a>
+        </li>
+      </ul>
+      <div class="container" data-spy="scroll" data-offset="50" style="position:relative; overflow-y: scroll; height:37em">
+        <div class="tab-content">
+          <div id="events" class="container tab-pane fade show active"><br>
+            <div class="jumbotron p-1 mb-1 mt-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>Concerto Mega Fixe</h3>
+                  <h6>Porto, Portugal</h6>
+                  <h6>17/02/2018</h6>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1 mb-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>Aniversário Makukula</h3>
+                  <h6>Kishasa, Congo</h6>
+                  <h6>04/03/2018</h6>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1 mb-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>Notas de Plog</h3>
+                  <h6>Porto, Portugal</h6>
+                  <h6>29/02/2020</h6>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1 mb-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/benfica_maritimo.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>Benfica-Marítimo</h3>
+                  <h6>Lisboa, Portugal</h6>
+                  <h6>03/03/2018</h6>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1 mb-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/benfica_aves.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>Benfica-Aves</h3>
+                  <h6>Lisboa, Portugal</h6>
+                  <h6>10/03/2018</h6>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/feirense_benfica.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>Feirense-Benfica</h3>
+                  <h6>Santa Maria da Feira, Portugal</h6>
+                  <h6>17/03/2018</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="friends" class="container tab-pane fade"><br>
+            <div class="jumbotron p-1 mb-1 mt-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/jonas.png" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>JonasGoncalves</h3>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1 mb-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/cervi.png" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>FrancoCervi</h3>
+                </div>
+              </div>
+            </div>
+            <div class="jumbotron p-1">
+              <div class="row">
+                <div class="col-md-3">
+                  <img src="./imgs/aalmeida.png" class="img-fluid rounded" alt="Cinque Terre">
+                </div>
+                <div class="col-md-9">
+                  <h3>AndreAlmeida</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
