--- a/A3/index.html
+++ b/A3/index.html
@@ -169,7 +169,7 @@
         <div class="jumbotron p-1 mb-5 mt-1">
           <div class="row">
             <div class="col-md-3">
-              <img src="./square.jpg" class="img-fluid rounded" alt="Cinque Terre">
+              <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
             <div class="col-md-9">
               <h3>Concerto Mega Fixe</h3>
@@ -181,7 +181,7 @@
         <div class="jumbotron p-1 mb-5">
           <div class="row">
             <div class="col-md-3">
-              <img src="./maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
+              <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
             <div class="col-md-9">
               <h3>Aniversário Makukula</h3>
@@ -193,7 +193,7 @@
         <div class="jumbotron p-1">
           <div class="row">
             <div class="col-md-3">
-              <img src="./plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
+              <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
             <div class="col-md-9">
               <h3>Notas de Plog</h3>
