--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="container">
-                    <img src="./imgs/events_management.jpg" class="img-fluid rounded" alt="Cinque Terre">
+                    <img src="./imgs/events_management.png" class="img-fluid rounded" alt="Cinque Terre">
                     <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla neque, semper eget dolor fermentum,
                         pellentesque mollis quam. Fusce at purus ac urna tempor imperdiet sollicitudin eget turpis. Interdum
                         et malesuada fames ac ante ipsum primis in faucibus.</p>
